Fixed CSS for fonts, colors and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,36 @@
 :root {
-    background-color: #ce7e00;
-    width: 100%;
-    height: 100%;
+   /* background-color: #ce7e00; */
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
 }
 body {
-    display: flex;
-    flex-direction: column;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Nosifer', 'Open Sans','Helvetica Neue', Helvetica, sans-serif;
-    line-height: 1.45;
-    /* background: #f6b26b; */
-    /* background: #eebbaa; */
-    /* background: #424242; */
+    background: #f6b26b; 
+    margin: 0 5;
 }
 header {
-    padding: 80px 0;
+    padding: 0;
+    margin-top: 0%;
     }
     section.hero {
-        background:#fff;
+        background: #f6b26b;
         width: 100vw;
-        margin: 25%;
+        margin: 15px 0px;
         border-radius: 20%;
     }
     #hero {
-        width: absolute;
+        width: 100vw;
     }
     #logo {
-        margin: 50px 0px;
+        margin: 0 10;
+        top: 0;
+        padding: 0px;
     }
     h1 {
-        background: linear-gradient(rgba(3, 100, 120, 0.687), rgb(5, 34, 57));
+        background: linear-gradient(rgba(236, 138, 10, 0.687), rgb(81, 89, 95));
         border: none;
         border-radius: 0px 100px;
         text-align: center;
@@ -43,10 +43,15 @@ header {
         text-align: center;
     }
    #searchEngine {
-        margin: 50px 0px;
+        margin: 50px 600px;
         align-items: center;
-        padding: 0 20px;
+        padding: 0;
         position: relative;
+        width: 250px;
+        left: 50%;  
+    }
+    .searchEngine {
+     width: 17px;
     }
     input[type=text], textarea, select {
         width: 100%;
@@ -62,21 +67,26 @@ header {
         padding: 7px;
     }
     .comments {
-        background: orange;
         top: 75%;
+        margin: 0px;
     }
     #comment {
         border-style: ridge;
         border-width: 3px;
         border: #ce7e00;
+        margin: 0px;
+        padding: 0px;
+        width: relative;
+        max-width: 500px;
+        float: inline-end;
     }
     .suggestion {
         font-weight: bold;
-        font-size: 42px;
-        position: inherit;
+        font-size: 20px;
         float: initial;
-        margin: 50px;
+        margin: 50 0 0 0;
         padding: 0;
+        width: absolute;
     }
     /* styling for HTML table */
     table {
@@ -100,11 +110,12 @@ header {
 
     footer {
         top: 85%;
-        background-color: #f55858;
+        background-color: #f3620d;
         width: 100vw;
     }
 #c {
     text-align: center;
+    font-size: 12px;
 }
 label {
     font-size: xx-large;
@@ -118,10 +129,13 @@ label {
 
 @media screen and (max-width: 375px) {
     h1 {
-        font-size: 35px;
+        font-size: 25px;
     }
     .search input:focus {
         width: 150px;
+    }
+    body {
+        background-color: aqua;
     }
 }
 @media screen and (max-width: 480px) {
@@ -134,16 +148,15 @@ font-size: 32px;
 margin: 0 0 8px 0;
 }
 h2 {
-font-size: 18px;
+font-size: 12px;
 }
 section {
 padding: 25px 0 15px 0;
 }
 .comment {
 width: 100%;
-min-width: 90vw;
+min-width: 42vw;
 color: black;
-background-color: orange;
 font-weight: bold;
 }
 .comments {
@@ -154,48 +167,64 @@ padding: 30px 0 10px 0;
 }           
 }
 
+@media screen and (max-width: 640px) {
+    h1 {
+        font-size: 20px;
+    }
+    h2 {
+        font-size: 12px;
+    }
+    body {
+     background-color: rgb(243, 124, 26);
+    }
+}
+
 /*Laptop screens */
 
 @media screen and (max-width: 768px) {
 .btn {
 display: block;
 font-size: 18px;
+background-color: #aaaaaa;
 }
 h1 {
 font-size: 42px;
 margin: 0 0 8px 0;
 }
 h2 {
-font-size: 24px;
+font-size: 12px;
 }
 section {
-padding: 25px 0;
+padding: 50px 0;
 }
 .comment {
-width: 100%;
-min-width: 400px;
-color: black;
-background: orange;
-font-weight: bold;
+align-items: center;
+}
+.suggestion {
+    font-size: 12px;
 }
 .comments {
-background: #aaaaaa;
+font-weight: bolder;
 }
 footer {
 padding: 30px 0 10px 0;
 }           
 }
-@media screen and (min-width: 765px) {
+
+@media screen and (min-width: 1008px) {
     header, h1 {
-        font-size: 65px;
+        font-size: 42px;
+    }
+    h2 {
+        font-size: small;
     }
 }
 /* Common desktop screen resolution */
 
-@media screen and (max-width: 1080px) {
+@media screen and (min-width: 1080px) {
 .btn {
 display: block;
-font-size: 18px;
+font-size: 30px;
 }
 h1 {
 font-size: 42px;
@@ -208,14 +237,12 @@ section {
 padding: 25px 0;
 }
 .comment {
-width: 100%;
-min-width: 400px;
-color: black;
-background: orange;
+min-width: 300px;
+color: #424242;
 font-weight: bold;
 }
 .comments {
-background: #aaaaaa;
+color: #424242;
 }
 footer {
 padding: 30px 0 10px 0;
